# DnD

DnD/: .clang-format  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
DnD/class/: entity.h  quest.cpp  quest.h
DnD/class/entities/: hero.h  monster.h
DnD/class/entities/entityMembers/: ability.h  attribute.cpp  attribute.h  attributeexample.cpp  attributeexample.h  class.h  equipmentsystem.cpp  equipmentsystem.h  healtheffect.cpp  healtheffect.h  healtheffecttype.cpp  healtheffecttype.h  inventory.h  levelsystem.cpp  levelsystem.h  race.cpp  race.h  skill.cpp  skill.h
DnD/class/entities/entityMembers/attributes/: baseattribute.cpp  baseattribute.h  damageattribute.cpp  damageattribute.h  defenceattribute.cpp  defenceattribute.h  derivedattribute.cpp  derivedattribute.h
DnD/class/general/: color.cpp  color.h  image.h  languagestring.cpp  languagestring.h
DnD/class/item/: inventoryitem.cpp  inventoryitem.h  itemrarity.cpp  itemrarity.h
DnD/class/network/: networksendable.cpp  networksendable.h
